--- a/index.html
+++ b/index.html
@@ -6,72 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Webshop</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/86ad615387.js"></script>
+    <title>Webshop</title>
 </head>
 
 <body>
-        <a onclick="showShoppingCart()">
-                <span id="counter"></span> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              </a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" id="start" href="index.html">Immanu El Shop</a>
+        <a class="navbar" id="info" href="#">Info</a>
+        <a class="navbar" id="contact" href="#">Contact</a>
+
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a class="navbar-brand" href="#">IE-Shop</a>
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
- 
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto" id="huvudKat">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"></a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Vinyls</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Cloths</a>
-                </li>
             </ul>
-
-            <form class="form-inline">
-                <div class="form-group">
-                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
+            <li class="nav-right">
+                <div id="form">
+                    <input type="text" value="username" class="user">
+                    <input type="text" value="password" class="password">
+                    <button class="loginButton">Login</button>
+                    <button class="logoutButton">Logout</button>
                 </div>
+            </li>
 
-                <div class="form-group">
-                    <label class="sr-only" for="exampleInputPassword3">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword3" placeholder="Password">
-                </div>
-
-                <div class="checkbox">
-                </div>
-                <button type="submit" class="btn btn-default">Sign in</button>
-            </form>
+            <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <i class="fa fa-shopping-cart cart" aria-hidden="true"></i>
+                </a>
+            </li>
         </div>
     </nav>
 
-    <div class="container">
-        <!-- <div class="row products">
-        </div> -->
-        <div class="row" id="allProducts">
-                <!--Här börjar korten, info hämtas från Json-->
-                </div> <!--Stänger row-->
-                
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">Welcome</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit doloremque officiis magni, quod natus veritatis
+                praesentium omnis sequi placeat modi harum cum laudantium optio porro inventore enim? Ipsam ut ullam ducimus
+                aspernatur perferendis, blanditiis eveniet nulla. Quam est quisquam quaerat?</p>
+
+        </div>
     </div>
+
+    <div class="content">
+
+        <div class="row" id="allProducts">
+            <!-- produkter -->
+        </div>
+    </div>
+    <div class="contactPage"></div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
         crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
 </body>
