updated sessionStorage and Admin-page

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </ul>
             <li class="nav-right">
                 <div id="form">
-                    <input type="text" value="username" class="user">
-                    <input type="password" value="password" class="password">
+                    <input type="text" placeholder="username" class="user">
+                    <input type="password" placeholder="password" class="password">
                     <button class="loginButton">Login</button>
                     <button class="logoutButton">Logout</button>
                 </div>
