--- a/kassa.html
+++ b/kassa.html
@@ -16,6 +16,7 @@
     <script src="https://use.fontawesome.com/86ad615387.js"></script>
     <title>Webshop</title>
 </head>
+<body>
 
 <div class="container">
     <br/>
@@ -23,17 +24,20 @@
     <div class="printKassa">
     </div>
     <div class="actions">
-        
+            
+
         <a href="index.html">Startsida</a>
-        <a href="#" onclick="deleteStorage()">Töm</a><br/>
+        <a href="#" onclick="deleteStorage()">Töm</a>
+        <br/>
         <p>Frakt: 55:-</p>
+        <button onclick='finishOrder()'>Slutför köp</button>
     </div>
     <br/>
     <span class="totalAmount"></span>
 </div>
 
 
-<body>
+
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
